--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,10 @@
   "builds": [
     {
       "src": "./index.js",
-      "use": "@vercel/node@20.0.0"
+      "use": "@vercel/node",
+      "config": {
+        "nodeVersion": "18.x"
+      }
     }
   ],
   "routes": [
